--- a/DashTube/src/main/res/values/styles.xml
+++ b/DashTube/src/main/res/values/styles.xml
@@ -21,4 +21,25 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <!--
+      ~ Common style properties for About dialog text
+      -->
+
+    <style name="AboutDialogTitle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_centerVertical">true</item>
+    </style>
+
+    <style name="AboutDialogText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+    </style>
 </resources>
