--- a/DashTube/src/main/res/values/arrays.xml
+++ b/DashTube/src/main/res/values/arrays.xml
@@ -1,26 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--
-        Values for the frequency list
-    <string-array name="frequency">
-        <item>Every 10 minutes</item>
-        <item>Every 15 minutes</item>
-        <item>Every 30 minutes</item>
-        <item>Every 45 minutes</item>
-        <item>Every hour</item>
-    </string-array>
-    <string-array name="frequency_values">
-        <item>600000</item>
-        <item>900000</item>
-        <item>1800000</item>
-        <item>2700000</item>
-        <item>3600000</item>
-    </string-array>
-    -->
 
     <!--
-        Values for available tube lines
-    -->
+      ~ Values for available tube lines; used for both line -> screen
+      ~ translation (for shortened tube names) and for the prefs
+      ~ multi select dialog
+      -->
+
     <!-- move into strings -->
     <string-array name="line_names">
         <item>Bakerloo</item>
@@ -37,7 +23,7 @@
         <item>Victoria</item>
         <item>W&#8217;loo &amp; City</item>
     </string-array>
-    <integer-array name="line_codes">
+    <string-array name="line_codes">
         <item>1</item> <!-- Bakerloo -->
         <item>2</item> <!-- Central -->
         <item>7</item> <!-- Circle -->
@@ -51,6 +37,7 @@
         <item>6</item> <!-- Piccadilly -->
         <item>3</item> <!-- Victoria -->
         <item>12</item> <!-- Waterloo & CIty -->
-    </integer-array>
+    </string-array>
 
+    <string-array name="default_values"/>
 </resources>
