--- a/DashTube/src/main/res/layout/about_dialog_title_view.xml
+++ b/DashTube/src/main/res/layout/about_dialog_title_view.xml
@@ -29,14 +29,14 @@
         android:layout_alignParentStart="true"/>
 
     <TextView
-        style="@style/AboutDialogTitle"
+        style="@style/DashTubeDialogTitle"
         android:id="@+id/appTitle"
         android:text="@string/app_name"
         android:layout_toRightOf="@+id/appIcon"
         android:textIsSelectable="true"/>
 
     <TextView
-        style="@style/AboutDialogTitle"
+        style="@style/DashTubeDialogTitle"
         android:text="@string/app_version"
         android:layout_toRightOf="@+id/appTitle"
         android:textColor="@android:color/darker_gray"/>
