--- a/DashTube/src/main/res/layout/about_dialog_view.xml
+++ b/DashTube/src/main/res/layout/about_dialog_view.xml
@@ -7,7 +7,7 @@
     android:padding="15dp">
 
     <TextView
-        style="@style/AboutDialogText"
+        style="@style/DashTubeDialogText"
         android:id="@+id/about_dialog_text"/>
 
 </RelativeLayout>
